# Sphinx_Basics

./: .gitignore
pybind11/: CMakeLists.txt
pybind11/python_test/: test.py
pybind11/sphinx_module_test/: conf.py  modules.rst
pybind11/sphinx_module_test/_build/doctrees/: cmake_example.doctree  environment.pickle  index.doctree  modules.doctree
pybind11/sphinx_module_test/_build/doctrees/_generate/: cmake_example.add.doctree  cmake_example.subtract.doctree
pybind11/sphinx_module_test/_build/html/: .buildinfo  cmake_example.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pybind11/sphinx_module_test/_build/html/_generate/: cmake_example.add.html  cmake_example.subtract.html
pybind11/sphinx_module_test/_build/html/_sources/: cmake_example.rst.txt  index.rst.txt
pybind11/src/: binder.cpp  math_lib.cpp
